[BUGFIX] Corrects image overflow issue on gecko engines

--- a/Resources/Public/Scss/Theme/_various.scss
+++ b/Resources/Public/Scss/Theme/_various.scss
@@ -9,3 +9,10 @@
 .pp-cf:after, .clear {
   clear: both;
 }
+
+//
+// Corrects image overflow on webkit engine
+//
+figure.image {
+  width: 100%;
+}
